勤怠管理昨日の追加

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -162,3 +162,28 @@ pre {
 h3 {
     font-size: larger;
 }
+
+table#attendance_list th {
+    font-weight: bold;
+    padding: 10px 2%;
+}
+
+table#attendance_list .attendance_name {
+    width: 20%;
+    padding: 10px 2%;
+}
+table#attendance_list .attendance_date {
+    width: 20%;
+}
+
+table#attendance_list .started_at {
+    width: 37%;
+}
+
+table#attendance_list .leaved_at {
+    width: 37%;
+}
+
+table#attendance_list .attendance_action {
+    width: 13%;
+}
